# pendulum

./: .gitignore
cpp/Pendulum/: CMakeLists.txt  makefile
cpp/Pendulum/src/: CMakeLists.txt  runge_kutta_system.h  vmath.h
cpp/Pendulum/test/: CMakeLists.txt  test_runge_kutta_system.cpp  test_vmath.cpp
cpp/Pendulums/: README.md  makefile
cpp/Pendulums/src/: main.h
cpp/Pendulums/test/: test_main.cpp
maple/: double_pendulum.mw  hybrid_manual_maple.mw
matlab/: kinematics.m
